<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>controller_manager</name>
  <version>4.42.2</version>
  <description>The main runnable entrypoint of ros2_control and home of controller management and resource management.</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="denis@stoglrobotics.de">Denis Štogl</maintainer>
  <maintainer email="christoph.froehlich@ait.ac.at">Christoph Froehlich</maintainer>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gen_version_h</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>ros2_control_cmake</build_depend>

  <depend>backward_ros</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>fmt</depend>
  <depend>generate_parameter_library</depend>
  <depend>hardware_interface</depend>
  <depend>libstatistics_collector</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_testing_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>python3-filelock</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2param</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>example_interfaces</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>python3-coverage</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  <test_depend>ros2pkg</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
